WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43129
CoreIPC::Connection leaks its read event on Windows
https://bugs.webkit.org/show_bug.cgi?id=43129
Summary
CoreIPC::Connection leaks its read event on Windows
Adam Roben (:aroben)
Reported
2010-07-28 11:04:21 PDT
CoreIPC::Connection leaks its read event on Windows
Attachments
Patch
(1.33 KB, patch)
2010-07-28 11:27 PDT
,
Adam Roben (:aroben)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-07-28 11:27:15 PDT
Created
attachment 62848
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-07-28 12:58:28 PDT
Committed
r64221
: <
http://trac.webkit.org/changeset/64221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug