Stop leaking Connection::m_readState.hEvent on Windows

Fixes <http://webkit.org/b/43129> CoreIPC::Connection leaks its read
event on Windows

Reviewed by Darin Adler.

* Platform/CoreIPC/win/ConnectionWin.cpp:
(CoreIPC::Connection::platformInvalidate): Close the event handle.

Canonical link: https://commits.webkit.org/55047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64221 268f45cc-cd09-0410-ab3c-d52691b4dbfc